# gemma4-physio

./: .env.example  .gitignore  NEW-PROJECT-CHARTER.md  README.md  pipeline_config.yaml  pyproject.toml
.agent/: README.md
.agents/: AGENTS.md
calibration/: .venv-sae
calibration/e_ca/: README.md  __init__.py  e_ca_capture.py  e_ca_encode.py  e_ca_metrics.py  e_ca_visualize.py  results.json  results_4b.json
calibration/e_ca/grids/: known_000.npz  known_001.npz  known_002.npz  known_003.npz  known_004.npz  known_005.npz  known_006.npz  known_007.npz  known_008.npz  known_009.npz  known_010.npz  known_011.npz  known_012.npz  known_013.npz  known_014.npz  known_015.npz  known_016.npz  known_017.npz  known_018.npz  known_019.npz  known_020.npz  known_021.npz  known_022.npz  known_023.npz  known_024.npz  known_025.npz  known_026.npz  known_027.npz  known_028.npz  known_029.npz  known_030.npz  known_031.npz  known_032.npz  known_033.npz  known_034.npz  known_035.npz  known_036.npz  known_037.npz  known_038.npz  known_039.npz  (+39 more)
calibration/e_ca/grids/4b/: known_000.npz  known_001.npz  known_002.npz  known_003.npz  known_016.npz  known_017.npz  known_018.npz  known_019.npz  known_020.npz  known_021.npz  known_022.npz  known_023.npz  known_029.npz  known_038.npz  unknown_012.npz
calibration/gemmascope2_fidelity/: MANIFEST.lock.json  README.md  fetch_reference.py  gate_a_load_sae.py  o2_capture.py  o2_encode.py
calibration/gemmascope2_fidelity/reference/: np_feature_0.json  np_feature_1.json  np_feature_2.json  np_feature_3.json  np_feature_4.json
calibration/neuronpedia_fidelity/: MANIFEST.lock.json  README.md  discriminating_1035.py  gate_a_load_sae.py  gate_c_capture.py  gate_c_encode.py  step_d2_ablate.py  step_d2_select.py  step_d_ablate.py  step_d_capture.py  step_d_select.py
calibration/neuronpedia_fidelity/reference/: np_feature_0.json  np_feature_19.json  np_feature_5.json
calibration/o3_toolkit/: README.md  o3_controls.py  o3_results.json
calibration/o4_entity_knowledge/: README.md  o4_4_layer_sweep.py  o4_5_recall_specificity.py  o4_5_recall_specificity_270m.py  o4_6_base_control.py  o4_7_base_rank_necessity.py  o4_decodability.py  o4_decodability_270m.json  o4_decodability_4b.json  o4_necessity.py  o4_necessity_270m_L17.json  o4_necessity_4b_L11.json  o4_necessity_sweep.py  o4_necessity_sweep_270m.json  o4_necessity_sweep_4b.json
calibration/o5_truth/: critica-interpret-necanistica.md  eu-clids_ela-mentes.code-workspace  o5_ablation.py  o5_probing.py  o5_steering.py
calibration/o6_casal/: o6_casal_eval.py  o6_casal_train.py
data/checkpoints/: plane_0.npy  plane_1.npy  plane_10.npy  plane_11.npy  plane_12.npy  plane_13.npy  plane_14.npy  plane_15.npy  plane_16.npy  plane_17.npy  plane_18.npy  plane_19.npy  plane_2.npy  plane_20.npy  plane_21.npy  plane_22.npy  plane_23.npy  plane_24.npy  plane_25.npy  plane_26.npy  plane_27.npy  plane_28.npy  plane_29.npy  plane_3.npy  plane_4.npy  plane_5.npy  plane_6.npy  plane_7.npy  plane_8.npy  plane_9.npy
data/eval/: entity_knowledge_contrast.json  fluency_neutral.json  nonrecall_knownfixed.json  refusal_contrast.json  truth_contrast.json
data/popqa/: popqa_full.json  popqa_subset.json
docs/: arxiv.sty  gemma3-accessible-report-pt-br.md  paper_draft.md  paper_draft_pt_br.md  probing-research-ideas.md  state-soace.md  topology_report.md
docs/antigr_reports/: benchmark_report_1782783100.md  benchmark_report_1782835200.md  implementation_plan.md  plots_interpretation.md  task.md  walkthrough.md
docs/in-tex/: convert.py  main.tex  main_memoir.tex  main_scrbook.tex
docs/research/: 00-methodology-and-value.md  01-experiment-plan.md  02-positive-control-plan.md  02-results.md  03-sae-neuronpedia-calibration-plan.md  04-E2-conclusions-nest-steps.md  05-O4-entity-knowledge-plan.md  06-O5-linear-truth-plan.md  07-e-ca-cellular-automata-plan.md  brevissimo-resumo-metodos.md  neuronpedia-api.md
docs/research/eu-clids_ela-mentes/: aziomas-pq.md
notebooks/: 01_first_inference.ipynb
scripts/: agentq.py  cli.py  compute_tda.py  cópia_de_tutorial_2_0.py  cópia_de_tutorial_gemma_scope_from_scratch.py  evaluate_semantic_variance.py  experiment_self_repair_layers.py  gen_phase6_report.py  generate_points.py  infer.py  o6_topology.py  orchestrator.py  plot_dimension_reduction.py  plot_results.py  plot_self_repair.py  plot_topology_results.py  run_pipeline.py  run_rotational_sweep.py  show_interferences.py  topological_and_advanced_controls.py  verify_interp.py  verify_rotational_generation.py  verify_setup.py
src/gemma4_lab/: __init__.py  agentq.py  config.py  observability.py
src/gemma4_lab/agents/: __init__.py  library_agent.py
src/gemma4_lab/config/: pipeline_schema.py
src/gemma4_lab/finetuning/: __init__.py  data.py  eval.py  lora.py
src/gemma4_lab/inference/: __init__.py  hf_local.py  llama_cpp.py  mlx_local.py
src/gemma4_lab/interp/: __init__.py  directions.py  e1c_controls.py  entity_knowledge.py  evaluation.py  extraction.py  matformer_elastic.py  numerical_health.py  recorder.py  refusal_control.py  topological_sweep.py  weight_amortization.py
src/gemma4_lab/models/: factory.py
src/gemma4_lab/synthetic_data/: __init__.py  gemini_client.py  generate.py
src/gemma4_lab/tools/: __init__.py  library.py
src/gemma4_physio/: __init__.py  cli.py  config.py  data_loader.py  directions.py  observability.py  spps_hooks.py  tda_engine.py
src/gemma4_physio/pipelines/: causal_scrubbing.py  freeman_stabilization.py  multi_causal_scrubbing.py  subspace_identity.py
tests/: conftest.py  test_e_ca_metrics.py  test_extraction.py  test_interp_smoke.py  test_physio_smoke.py  test_smoke.py  test_tda_casal.py
